<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText27"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintEnd_toStartOf="@+id/textView17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText28"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText27" />

        <EditText
            android:id="@+id/editText29"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText28" />

        <EditText
            android:id="@+id/editText31"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText29" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="@dimen/operatorWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/minus"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText28"
            app:layout_constraintEnd_toStartOf="@+id/editText4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText28"
            app:layout_constraintTop_toTopOf="@+id/editText28" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="@dimen/operatorWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/multiply"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText29"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText29"
            app:layout_constraintTop_toTopOf="@+id/editText29" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="@dimen/operatorWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/division"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText31"
            app:layout_constraintEnd_toStartOf="@+id/editText8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText31"
            app:layout_constraintTop_toTopOf="@+id/editText31" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="@dimen/operatorWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/plus"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText27"
            app:layout_constraintEnd_toStartOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText27"
            app:layout_constraintTop_toTopOf="@+id/editText27" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText27"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView17" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText28"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText29"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView15" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText31"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView16" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/CalcButtonWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/laske"
            android:textSize="@dimen/CalcButtonFontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
            app:layout_constraintEnd_toStartOf="@+id/editText9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/CalcButtonWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/laske"
            android:textSize="@dimen/CalcButtonFontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
            app:layout_constraintEnd_toStartOf="@+id/editText10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText4" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/CalcButtonWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/laske"
            android:textSize="@dimen/CalcButtonFontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
            app:layout_constraintEnd_toStartOf="@+id/editText11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText5" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/CalcButtonWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/laske"
            android:textSize="@dimen/CalcButtonFontSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
            app:layout_constraintEnd_toStartOf="@+id/editText12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText8" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText3"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/editText3" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/editText5" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="@dimen/calcElementWidth"
            android:layout_height="@dimen/calcElementHeight"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/nolla"
            android:inputType="numberDecimal|numberSigned"
            android:textSize="@dimen/fontSize"
            app:layout_constraintBottom_toBottomOf="@+id/editText8"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/editText8" />


    </android.support.constraint.ConstraintLayout>
</layout>